Say how this actually gets onto a Pi, and onto a server
The READMEs explained how to build and what the process needs, and stopped at
the moment that decides whether somebody without a Java toolchain gets this
running at all: how the artifact ends up on the machine and stays running. Both
deployments here go through boot2vm — the gitignored vmhosting.conf was its
config all along — and nothing said so.

pi-reader gets the full treatment, because that is where the tool earns it:
install, Deploy init, Deploy, with the answers that fit a Pi on a home network
and the configuration going in through Deploy env set — including
JDK_JAVA_OPTIONS for the native-access flag the LoRa driver needs, which the
systemd unit's plain java -jar would otherwise have no way to receive. Also the
two things the tool cannot know: the group memberships its app user needs, and
the pi4j-drivers branch that still has to be built first.

The server gets a paragraph rather than a section: Deploy init, Deploy, secrets
through Deploy env set, and the honest note that PostgreSQL is the one piece it
does not arrange.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>